# ginf

./: package.json  pnpm-lock.yaml
src/: App.vue  main.ts  styles.css
src-tauri/: .gitignore  Cargo.toml  diesel.toml  tauri.conf.json  test.db
src-tauri/migrations/2024-07-11-182126_create_files/: up.sql
src-tauri/migrations/2024-07-11-182142_create_tags/: up.sql
src-tauri/migrations/2024-07-11-182154_create_fileTags/: down.sql  up.sql
src-tauri/src/: config.rs  db.rs  handler.rs  main.rs  models.rs  schema.rs
src/components/: FileTable.vue  ImportFile.vue
