[package]
name = "ginf"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "fs-read-dir", "path-all", "dialog-open", "shell-open"] }
diesel = {version = "2.2", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2"] }
diesel_migrations = {version = "2.2"}
libsqlite3-sys = {version = "0.28", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
dirs = "5"
toml = "0.8"
log = "0.4"
env_logger = "0.11"
rand = "0.8"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
